--- a/euroleague.ipynb
+++ b/euroleague.ipynb
@@ -2901,12 +2901,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> Add a column **Playoffs** that shows if a team is qualified at playoffs or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def playoffs_enter(row):\n",
+    "    if row['Position'] <= 8:\n",
+    "        return 'Yes'\n",
+    "    else:\n",
+    "        return'No'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "season_2021_2022['Playoffs'] = season_2021_2022.apply(playoffs_enter, axis = 1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     ">The new format of Euroleague Standings looks like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2939,6 +2969,10 @@
        "      <th>Country</th>\n",
        "      <th>Arena</th>\n",
        "      <th>Capacity</th>\n",
+       "      <th>Win_Rate</th>\n",
+       "      <th>Total Attendance</th>\n",
+       "      <th>Arenas Capacity Rate</th>\n",
+       "      <th>Playoffs</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2953,6 +2987,10 @@
        "      <td>Spain</td>\n",
        "      <td>Palau Blaugrana</td>\n",
        "      <td>7585</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>72436</td>\n",
+       "      <td>68.21</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2965,6 +3003,10 @@
        "      <td>Greece</td>\n",
        "      <td>Peace and Friendship Stadium</td>\n",
        "      <td>11640</td>\n",
+       "      <td>67.86</td>\n",
+       "      <td>98518</td>\n",
+       "      <td>60.46</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2977,6 +3019,10 @@
        "      <td>Italy</td>\n",
        "      <td>Mediolanum Forum</td>\n",
        "      <td>12700</td>\n",
+       "      <td>67.86</td>\n",
+       "      <td>68502</td>\n",
+       "      <td>38.53</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2989,6 +3035,10 @@
        "      <td>Spain</td>\n",
        "      <td>WiZink Center</td>\n",
        "      <td>15000</td>\n",
+       "      <td>64.29</td>\n",
+       "      <td>83202</td>\n",
+       "      <td>39.62</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3001,6 +3051,10 @@
        "      <td>Israel</td>\n",
        "      <td>Menora Mivtachim Arena</td>\n",
        "      <td>10383</td>\n",
+       "      <td>60.71</td>\n",
+       "      <td>118006</td>\n",
+       "      <td>81.18</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -3013,6 +3067,10 @@
        "      <td>Turkey</td>\n",
        "      <td>Sinan Erdem Dome</td>\n",
        "      <td>16000</td>\n",
+       "      <td>57.14</td>\n",
+       "      <td>166264</td>\n",
+       "      <td>74.22</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -3025,6 +3083,10 @@
        "      <td>France</td>\n",
        "      <td>Salle Gaston Médecin</td>\n",
        "      <td>4090</td>\n",
+       "      <td>53.57</td>\n",
+       "      <td>49504</td>\n",
+       "      <td>86.45</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -3037,6 +3099,10 @@
        "      <td>Germany</td>\n",
        "      <td>Audi Dome</td>\n",
        "      <td>6700</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>37422</td>\n",
+       "      <td>39.90</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -3049,6 +3115,10 @@
        "      <td>Spain</td>\n",
        "      <td>Buesa Arena</td>\n",
        "      <td>15504</td>\n",
+       "      <td>42.86</td>\n",
+       "      <td>96390</td>\n",
+       "      <td>44.41</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -3061,6 +3131,10 @@
        "      <td>Germany</td>\n",
        "      <td>Mercedes-Benz Arena</td>\n",
        "      <td>14500</td>\n",
+       "      <td>42.86</td>\n",
+       "      <td>53550</td>\n",
+       "      <td>26.38</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -3073,6 +3147,10 @@
        "      <td>Serbia</td>\n",
        "      <td>Stark Arena</td>\n",
        "      <td>13386</td>\n",
+       "      <td>42.86</td>\n",
+       "      <td>84588</td>\n",
+       "      <td>45.14</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -3085,6 +3163,10 @@
        "      <td>Turkey</td>\n",
        "      <td>Ulker Sports and Event Hall</td>\n",
        "      <td>13059</td>\n",
+       "      <td>35.71</td>\n",
+       "      <td>77630</td>\n",
+       "      <td>42.46</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -3097,6 +3179,10 @@
        "      <td>Greece</td>\n",
        "      <td>OAKA</td>\n",
        "      <td>18989</td>\n",
+       "      <td>32.14</td>\n",
+       "      <td>54362</td>\n",
+       "      <td>20.45</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -3109,6 +3195,10 @@
        "      <td>France</td>\n",
        "      <td>Astroballe</td>\n",
        "      <td>5556</td>\n",
+       "      <td>28.57</td>\n",
+       "      <td>59318</td>\n",
+       "      <td>76.26</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -3121,6 +3211,10 @@
        "      <td>Lithuania</td>\n",
        "      <td>Zalgirio arena</td>\n",
        "      <td>15415</td>\n",
+       "      <td>28.57</td>\n",
+       "      <td>106820</td>\n",
+       "      <td>49.50</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3144,25 +3238,42 @@
        "13        14             ASVEL     8      20        4237                 15.1   \n",
        "14        15          Zalgiris     8      20        7630                 10.0   \n",
        "\n",
-       "      Country                         Arena Capacity  \n",
-       "0       Spain               Palau Blaugrana     7585  \n",
-       "1      Greece  Peace and Friendship Stadium    11640  \n",
-       "2       Italy              Mediolanum Forum    12700  \n",
-       "3       Spain                 WiZink Center    15000  \n",
-       "4      Israel        Menora Mivtachim Arena    10383  \n",
-       "5      Turkey              Sinan Erdem Dome    16000  \n",
-       "6      France          Salle Gaston Médecin     4090  \n",
-       "7     Germany                     Audi Dome     6700  \n",
-       "8       Spain                   Buesa Arena    15504  \n",
-       "9     Germany           Mercedes-Benz Arena    14500  \n",
-       "10     Serbia                   Stark Arena    13386  \n",
-       "11     Turkey   Ulker Sports and Event Hall    13059  \n",
-       "12     Greece                          OAKA    18989  \n",
-       "13     France                    Astroballe     5556  \n",
-       "14  Lithuania                Zalgirio arena    15415  "
+       "      Country                         Arena Capacity  Win_Rate  \\\n",
+       "0       Spain               Palau Blaugrana     7585     75.00   \n",
+       "1      Greece  Peace and Friendship Stadium    11640     67.86   \n",
+       "2       Italy              Mediolanum Forum    12700     67.86   \n",
+       "3       Spain                 WiZink Center    15000     64.29   \n",
+       "4      Israel        Menora Mivtachim Arena    10383     60.71   \n",
+       "5      Turkey              Sinan Erdem Dome    16000     57.14   \n",
+       "6      France          Salle Gaston Médecin     4090     53.57   \n",
+       "7     Germany                     Audi Dome     6700     50.00   \n",
+       "8       Spain                   Buesa Arena    15504     42.86   \n",
+       "9     Germany           Mercedes-Benz Arena    14500     42.86   \n",
+       "10     Serbia                   Stark Arena    13386     42.86   \n",
+       "11     Turkey   Ulker Sports and Event Hall    13059     35.71   \n",
+       "12     Greece                          OAKA    18989     32.14   \n",
+       "13     France                    Astroballe     5556     28.57   \n",
+       "14  Lithuania                Zalgirio arena    15415     28.57   \n",
+       "\n",
+       "    Total Attendance  Arenas Capacity Rate Playoffs  \n",
+       "0              72436                 68.21      Yes  \n",
+       "1              98518                 60.46      Yes  \n",
+       "2              68502                 38.53      Yes  \n",
+       "3              83202                 39.62      Yes  \n",
+       "4             118006                 81.18      Yes  \n",
+       "5             166264                 74.22      Yes  \n",
+       "6              49504                 86.45      Yes  \n",
+       "7              37422                 39.90      Yes  \n",
+       "8              96390                 44.41       No  \n",
+       "9              53550                 26.38       No  \n",
+       "10             84588                 45.14       No  \n",
+       "11             77630                 42.46       No  \n",
+       "12             54362                 20.45       No  \n",
+       "13             59318                 76.26       No  \n",
+       "14            106820                 49.50       No  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3979,7 +4090,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\xrist\\AppData\\Local\\Temp\\ipykernel_804\\2916185187.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\xrist\\AppData\\Local\\Temp\\ipykernel_12232\\2916185187.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  corr21_22 = season_2021_2022.corr()\n"
      ]
     },
@@ -4035,7 +4146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4045,7 +4156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4071,7 +4182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4085,7 +4196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4094,7 +4205,7 @@
        "Text(0, 0.5, 'Attendance')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4143,14 +4254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\xrist\\AppData\\Local\\Temp\\ipykernel_804\\1347501045.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "C:\\Users\\xrist\\AppData\\Local\\Temp\\ipykernel_12232\\1347501045.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  country_grouped = season_2021_2022.groupby('Country').sum()\n"
      ]
     }
@@ -4169,7 +4280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4178,7 +4289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -4187,7 +4298,7 @@
        "Text(0, 0.5, 'Total Attendance')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4238,7 +4349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4381,7 +4492,7 @@
        "14          Zalgiris     8      20"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4393,7 +4504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4402,7 +4513,7 @@
        "<AxesSubplot: title={'center': 'Wins/Losses Per Team'}>"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4447,7 +4558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4474,7 +4585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4501,7 +4612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4528,7 +4639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4555,7 +4666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4582,7 +4693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4595,7 +4706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4612,7 +4723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4621,7 +4732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4633,7 +4744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4699,7 +4810,7 @@
        "4     9       3.883  2021-2022"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4726,16 +4837,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x257503f9330>"
+       "<matplotlib.legend.Legend at 0x264702db9d0>"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
